--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,12 @@ services:
     depends_on:
       config-server:
         condition: service_healthy
+
+  review-service:
+      build: ../review-service
+      mem_limit: 200000000
+      ports:
+        - 8082:8082
+      depends_on:
+        config-server:
+          condition: service_healthy
