--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,11 @@ services:
       config-server:
         condition: service_healthy
 
+  inventory-mongodb:
+    image: mongo:latest
+    ports:
+      - 27017:27017
+
   inventory-service:
     build: ../inventory-service
     mem_limit: 200000000
