--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,11 @@ services:
       config-server:
         condition: service_healthy
 
+  order-mongodb:
+    image: mongo:latest
+    ports:
+      - 27001:27017
+
   order-service:
     build: ../order-service
     mem_limit: 200000000
