Add centralized logging for shopping cart

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,11 +80,22 @@ services:
       config-server:
         condition: service_healthy
 
+  shopping-cart-filebeat:
+      image: docker.elastic.co/beats/filebeat:6.2.4
+      volumes:
+        - ../shopping-cart/filebeat.yml:/usr/share/filebeat/filebeat.yml
+        - ../shopping-cart/logs/:/logs/
+      depends_on:
+        logstash:
+          condition: service_healthy
+
   shopping-cart:
       build: ../shopping-cart
       mem_limit: 200000000
       ports:
         - 8089:8089
+      volumes:
+        - ../shopping-cart/logs/:/logs/
       depends_on:
         config-server:
           condition: service_healthy
